# engine

./: .gitattributes  CMakeLists.txt  README.md  TODO.md  build.zig  build.zig.zon  package-lock.json  package.json  todo.md  tsconfig.json
assets/shaders/: placeholder.spv  placeholder.wgsl
resources/icon/: icon.aseprite
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: assets.cpp  assets.h  assets.zig  color.zig  config.zig  engine.ts  engine.zig  error.cpp  error.h  graphics.cpp  graphics.h  graphics.zig  index.ts  load.cpp  load.h  main.cpp  main.zig  material.zig  mesh.cpp  mesh.h  object.cpp  object.h  panik.cpp  panik.h  sdlk.cpp  sdlk.h  util.zig  vlk.cpp  vlk.h  window.zig
src/graphics/: graphics.cpp  graphics.h  vlk.cpp  vlk.h  window.cpp  window.h
